# tree-sitter-flatbuffer

./: .project  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  build.zig  build.zig.zon  go.mod  grammar.js  package-lock.json  package.json  pom.xml  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-flatbuffer.pc.in
bindings/go/: binding.go  binding_test.go
bindings/java/main/io/github/treesitter/jtreesitter/flatbuffer/: TreeSitterFlatbuffer.java
bindings/java/test/: TreeSitterFlatbufferTest.java
bindings/node/: binding.cc  index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_flatbuffer/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterFlatbuffer/: flatbuffer.h
bindings/swift/TreeSitterFlatbufferTests/: TreeSitterFlatbufferTests.swift
bindings/zig/: root.zig  test.zig
src/: grammar.json  node-types.json  parser.c
test/corpus/: namespace.txt
