[package]
name = "tree-sitter-flatbuffer"
description = "A parser for google flatbuffers"
version = "0.1.0"
authors = ["David Montiel <davidm0ntiel@proton.me>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "flatbuffer"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/d-aome/tree-sitter-flatbuffer"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.26.3"
